--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "learning-express-js",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +19,13 @@
   "bugs": {
     "url": "https://github.com/albe68/express.js/issues"
   },
-  "homepage": "https://github.com/albe68/express.js#readme"
+  "homepage": "https://github.com/albe68/express.js#readme",
+  "devDependencies": {
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "mongodb": "^5.6.0"
+  }
 }
